--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ header {
   z-index: 1;
   width: 100%;
   height: 80px;
-  border-bottom: 1px solid black;
   background-color: white;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
+  border-bottom: 1px solid black;
 
   }.logo {
     color: MediumAquamarine;
@@ -26,6 +26,12 @@ header {
 
 img {
   margin-right: 10px;
+}
+
+p {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
 
 .nav {
@@ -52,13 +58,19 @@ body {
 }
 
 .section1 {
-  border: 1px solid black;
   display: block;
 }
 
 .section1 span {
-  border: 1px solid black;
   display: block;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+  height: 300px;
+  margin-top: 0;
+  font-size: 40px;
+  text-align: left;
+  font-family: Georgia;
+  font-weight: bold;
+  color: white;
 }
 
 .section1 p {
@@ -67,13 +79,14 @@ body {
 
 }
 .section2 {
-  border: 1px solid black;
   display: block;
+  width: 300px;
 }
 
 .section2 h2 {
   margin: 20px 0px;
   display: block;
+  margin-top: 20px;
 }
 
 .section2 p {
@@ -82,18 +95,27 @@ body {
 }
 
 .section2 span {
-  border: 1px solid black;
   display: block;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
+  height: 300px;
+  margin-top: 100px;
+  text-align: center;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
 }
 
 .section3 {
-  border: 1px solid black;
   display: block;
+  width: 300px;
+  margin-left: 25px;
 }
 
 .section3 h2 {
   margin: 20px 0px;
   display: block;
+  margin-top: 20px;
 }
 
 .section3 p {
@@ -102,17 +124,27 @@ body {
 }
 
 .section3 span {
-  border: 1px solid black;
   display: block;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
+  height: 300px;
+  margin-top: 100px;
+  text-align: center;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+
+.column2 {
+  display: flex;
+  justify-content: center;
 }
 
 .column.medium {
-  border: 1px solid black;
   width: 300px;
 }
 
 .section4 {
-  border: 1px solid black;
   display: block;
 }
 
@@ -127,13 +159,19 @@ body {
 }
 
 .section5 {
-  border: 1px solid black;
   display: block;
 }
 
 .section5 span {
-  border: 1px solid black;
   display: block;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
+  height: 300px;
+  margin-top: 0;
+  text-align: center;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
 }
 
 .section5 p {
@@ -143,21 +181,17 @@ body {
 
 .column.small {
   width: 240px;
-  border: 1px solid black;
 }
 
 .section6 {
-  border: 1px solid black;
   display: block;
 }
 
 .section6 img {
-  border: 1px solid black;
   display: block;
 }
 
 .section7 {
-  border: 1px solid black;
   display: block;
 }
 
@@ -180,6 +214,5 @@ body {
 .content {
   display: flex;
   flex-direction: row;
-  border: 1px solid black;
   margin: 0px 15px;
 }
