--- a/style.css
+++ b/style.css
@@ -51,10 +51,13 @@ a {
 body {
   display: inline;
   justify-content: space-between;
+  mar
 }
 
 .column.large {
   width: 630px;
+  margin-left: 50px;
+  margin-right: 30px;
 }
 
 .section1 {
@@ -67,7 +70,7 @@ body {
   height: 300px;
   margin-top: 0;
   font-size: 40px;
-  text-align: left;
+  text-align: center;
   font-family: Georgia;
   font-weight: bold;
   color: white;
@@ -142,6 +145,7 @@ body {
 
 .column.medium {
   width: 300px;
+  margin-right: 30px;
 }
 
 .section4 {
@@ -181,6 +185,8 @@ body {
 
 .column.small {
   width: 240px;
+  flex-direction: column;
+  margin-right: 50px;
 }
 
 .section6 {
@@ -198,17 +204,69 @@ body {
 .section7 h3 {
   display: block;
   margin: 20px 0px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .section7 p {
   display: block;
+  flex-direction: column;
+  border-bottom: 0.5px black solid;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  padding: 15px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: MediumAquamarine;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-top: 150px;
+}
+
+.header2 {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+.copyright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  padding-bottom: 150px;
+}
+
+.nav2 {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 40px;
+  font-family: Verdana;
+  font-size: 12px;
+}
+
+.nav2 span {
+  padding: 20px 10px;
 }
 
 .column {
   display: flex;
   flex-direction: column;
   margin-top: 110px;
-  margin-right: 30px;
+  margin-bottom: 70px;
+
 }
 
 .content {
